@@ -503,6 +503,13 @@ name|done
 init|=
 literal|false
 decl_stmt|;
+DECL|field|extractEmbedded
+specifier|private
+name|boolean
+name|extractEmbedded
+init|=
+literal|false
+decl_stmt|;
 DECL|field|parser
 specifier|private
 name|String
@@ -668,6 +675,31 @@ name|e
 argument_list|,
 literal|"Unable to load Tika Config"
 argument_list|)
+expr_stmt|;
+block|}
+name|String
+name|extractEmbeddedString
+init|=
+name|context
+operator|.
+name|getResolvedEntityAttribute
+argument_list|(
+literal|"extractEmbedded"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|"true"
+operator|.
+name|equals
+argument_list|(
+name|extractEmbeddedString
+argument_list|)
+condition|)
+block|{
+name|extractEmbedded
+operator|=
+literal|true
 expr_stmt|;
 block|}
 name|format
@@ -1047,6 +1079,23 @@ argument_list|,
 name|IdentityHtmlMapper
 operator|.
 name|INSTANCE
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|extractEmbedded
+condition|)
+block|{
+name|context
+operator|.
+name|set
+argument_list|(
+name|Parser
+operator|.
+name|class
+argument_list|,
+name|tikaParser
 argument_list|)
 expr_stmt|;
 block|}
