@@ -40,138 +40,6 @@ end_import
 
 begin_import
 import|import
-name|org
-operator|.
-name|w3c
-operator|.
-name|dom
-operator|.
-name|Document
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|w3c
-operator|.
-name|dom
-operator|.
-name|Element
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|xml
-operator|.
-name|sax
-operator|.
-name|InputSource
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|xml
-operator|.
-name|parsers
-operator|.
-name|DocumentBuilder
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|xml
-operator|.
-name|parsers
-operator|.
-name|DocumentBuilderFactory
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|xml
-operator|.
-name|transform
-operator|.
-name|Transformer
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|xml
-operator|.
-name|transform
-operator|.
-name|TransformerFactory
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|xml
-operator|.
-name|transform
-operator|.
-name|dom
-operator|.
-name|DOMSource
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|xml
-operator|.
-name|transform
-operator|.
-name|stream
-operator|.
-name|StreamResult
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|StringReader
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|StringWriter
-import|;
-end_import
-
-begin_import
-import|import
 name|java
 operator|.
 name|util
@@ -326,6 +194,30 @@ literal|"//str[@name='text'][contains(.,'<div>')]"
 block|,
 literal|"//str[@name='text'][contains(.,'class=\"classAttribute\"')]"
 comment|//attributes are lower-cased
+block|}
+decl_stmt|;
+DECL|field|testsEmbedded
+specifier|private
+name|String
+index|[]
+name|testsEmbedded
+init|=
+block|{
+literal|"//*[@numFound='1']"
+block|,
+literal|"//str[@name='text'][contains(.,'When in the Course')]"
+block|}
+decl_stmt|;
+DECL|field|testsIgnoreEmbedded
+specifier|private
+name|String
+index|[]
+name|testsIgnoreEmbedded
+init|=
+block|{
+literal|"//*[@numFound='1']"
+block|,
+literal|"//str[@name='text'][not(contains(.,'When in the Course'))]"
 block|}
 decl_stmt|;
 annotation|@
@@ -570,6 +462,138 @@ operator|+
 literal|">"
 operator|+
 literal|"<field column='text'/>"
+operator|+
+literal|"</entity>"
+operator|+
+literal|"</document>"
+operator|+
+literal|"</dataConfig>"
+return|;
+block|}
+annotation|@
+name|Test
+DECL|method|testEmbeddedDocsLegacy
+specifier|public
+name|void
+name|testEmbeddedDocsLegacy
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|//test legacy behavior: ignore embedded docs
+name|runFullImport
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|,
+name|testsIgnoreEmbedded
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testEmbeddedDocsTrue
+specifier|public
+name|void
+name|testEmbeddedDocsTrue
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|runFullImport
+argument_list|(
+name|getConfigEmbedded
+argument_list|(
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|,
+name|testsEmbedded
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testEmbeddedDocsFalse
+specifier|public
+name|void
+name|testEmbeddedDocsFalse
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|runFullImport
+argument_list|(
+name|getConfigEmbedded
+argument_list|(
+literal|false
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|,
+name|testsIgnoreEmbedded
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|getConfigEmbedded
+specifier|private
+name|String
+name|getConfigEmbedded
+parameter_list|(
+name|boolean
+name|extractEmbedded
+parameter_list|)
+block|{
+return|return
+literal|"<dataConfig>"
+operator|+
+literal|"<dataSource type=\"BinFileDataSource\"/>"
+operator|+
+literal|"<document>"
+operator|+
+literal|"<entity name=\"Tika\" processor=\"TikaEntityProcessor\" url=\""
+operator|+
+name|getFile
+argument_list|(
+literal|"dihextras/test_recursive_embedded.docx"
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+operator|+
+literal|"\" "
+operator|+
+literal|"       extractEmbedded=\""
+operator|+
+name|extractEmbedded
+operator|+
+literal|"\">"
+operator|+
+literal|"<field column=\"Author\" meta=\"true\" name=\"author\"/>"
+operator|+
+literal|"<field column=\"title\" meta=\"true\" name=\"title\"/>"
+operator|+
+literal|"<field column=\"text\"/>"
 operator|+
 literal|"</entity>"
 operator|+
